// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test stream helpers FlattenStream: should batch rows by key 1`] = `
Array [
  Object {
    "id": "0-0",
    "num": 0,
  },
  Object {
    "id": "0-1",
    "num": 0,
  },
  Object {
    "id": "0-2",
    "num": 0,
  },
  Object {
    "id": "0-3",
    "num": 0,
  },
  Object {
    "id": "1-0",
    "num": 0,
  },
  Object {
    "id": "1-1",
    "num": 1,
  },
  Object {
    "id": "1-2",
    "num": 2,
  },
  Object {
    "id": "1-3",
    "num": 3,
  },
  Object {
    "id": "2-0",
    "num": 0,
  },
  Object {
    "id": "2-1",
    "num": 2,
  },
  Object {
    "id": "2-2",
    "num": 4,
  },
  Object {
    "id": "2-3",
    "num": 6,
  },
]
`;

exports[`test stream helpers StreamAggBy: should aggregate rows by key 1`] = `
Array [
  Object {
    "id": "id0",
    "num": 3,
  },
  Object {
    "id": "id1",
    "num": 12,
  },
  Object {
    "id": "id2",
    "num": 21,
  },
]
`;

exports[`test stream helpers StreamBatchBy: should batch rows by key 1`] = `
Array [
  Array [
    Object {
      "id": "id0",
      "num": 0,
    },
    Object {
      "id": "id0",
      "num": 1,
    },
    Object {
      "id": "id0",
      "num": 2,
    },
  ],
  Array [
    Object {
      "id": "id1",
      "num": 3,
    },
    Object {
      "id": "id1",
      "num": 4,
    },
    Object {
      "id": "id1",
      "num": 5,
    },
  ],
  Array [
    Object {
      "id": "id2",
      "num": 6,
    },
    Object {
      "id": "id2",
      "num": 7,
    },
    Object {
      "id": "id2",
      "num": 8,
    },
  ],
]
`;

exports[`test stream helpers StreamBufferToLinesTransform: parses buffer to lines properly 1`] = `
Array [
  "hello",
  "world",
  "lorem ipsum",
]
`;

exports[`test stream helpers StreamBufferToLinesTransform: parses buffer to lines properly 2`] = `
Array [
  "hello",
  "world",
  "lorem ipsum",
  "but not this one",
]
`;

exports[`test stream helpers StreamLinesToBufferTransform: should transform lines to buffer 1`] = `
"hello
world
lorem ipsum
lorem ipsum
"
`;

exports[`test stream helpers StreamLinesToBufferTransform: should transform lines to buffer 2`] = `
"hello
world
lorem ipsum
lorem ipsum
one more line
"
`;
